test/reverseSquare13.slq

def f[n:!â„•](const x:ğ”¹^n)mfreeâ‡’();
def g[n:!â„•](const x:ğ”¹^n,y:ğ”¹)mfreeâ‡’y;
def main(){
	g(x,x,x):=(); /// error
	g[2](x,x,x):=(); /// error
	x:=0:ğ”¹;
	f(x):=(); /// error
	f[2](x):=2; /// error
}

